# systeminfo

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.sh  copy_to_usr_bin.sh  install-root-user.sh  install.sh  makefile  men  mree  only-copy-systeminfo.sh  snapcraft.yaml  systeminfo  systeminfo-command-activate.sh  systeminfo-command-deactivate.sh  systeminfo-command.sh  systeminfo_command_activate.sh  systeminfo_command_remove.sh  systeminfo_remove_script.sh  systeminfo_script.sh
Debug/: makefile  systeminfo
Debug/src/: functions_command.d  functions_file.d  functions_file_memory.d  functions_file_operations.d  functions_file_swap.d  functions_output.d  functions_output_memory_swap.d  subdir.mk  systeminfo.d
snap/: snapcraft.yaml
src/: CMakeLists.txt  function_open_file.cpp  function_open_file.h  function_output_log.cpp  function_output_log.h  function_output_logo.cpp  function_output_logo.h  functions_command.cpp  functions_command.h  functions_file.cpp  functions_file.h  functions_file_memory.cpp  functions_file_memory.h  functions_file_operations.cpp  functions_file_operations.h  functions_file_swap.cpp  functions_file_swap.h  functions_network.cpp  functions_network.h  functions_output.cpp  functions_output.h  functions_output_memory.cpp  functions_output_memory.h  functions_output_memory_swap.cpp  functions_output_memory_swap.h  functions_output_swap.cpp  functions_output_swap.h  functions_strings_operations.cpp  functions_strings_operations.h  gui.cpp  gui.h  systeminfo.cpp
